--- a/homework/hw1.Rmd
+++ b/homework/hw1.Rmd
@@ -18,26 +18,38 @@ When you save the notebook, an HTML file containing the code and output will be 
 Read more about it in Chapter 12 of the [INFO 201 textbook](https://info201.github.io/)
 
 ### 1) Write 3 things from the INFO 201 textbook that were confusing:
-1.1) *TODO*
+1.1) Vectors start at index 1 rather than 0 which I am used to with arrays.
 
-1.2) *TODO*
+1.2)I was confused by the dplyr Library because I have never used it before.
 
-1.3) *TODO*
+1.3) Im not sure which APIs to use in R yet.
 
 
 ### Vectors
 ```{r}
 # Set variable vec_even to a vector of even numbers from 2 to 100 (inclusive). 
-vec_even <- #TODO
+vec_even <- seq(2, 100, 2)
 
 # Set variable vec_odd to a vector of odd numbers from 1 to 99 (inclusive).
-vec_odd <- #TODO
+vec_odd <- seq(1, 100, 2)
 
 # Set variable vec_sum to the sum of vec_even and vec_odd.
-vec_sum <- #TODO
+vec_sum <- vec_even + vec_odd
 
 # Work on 2.1 below
-  
+#Accepts numbers as a parameter and returns the number that are larger than the mean.
+get_upper <- function(nums) {
+  num_mean = mean(nums)
+  count <- 0
+  for (num in nums) {
+    if(num > num_mean) {
+      count <- count + 1
+    }
+  }
+  return (count);
+}
+
+print(get_upper(vec_sum))
 ```
 
 How many values in vec_sum are greater than the mean?
@@ -45,6 +57,7 @@ How many values in vec_sum are greater than the mean?
 2.1) *TODO*: Write a function get_upper which takes in a vector of numbers and returns the number of values which are greater than the mean. So get_upper(c(1,3,2,5)) would return 2.
 
 2.2) *TODO*: How many values in vec_sum are greater than the mean?
+25
 
 ### Importing libraries
 Now we're just importing some libraries. If you get errors when you run this, you may need to install some packages (see Ch 10.2).
@@ -64,17 +77,28 @@ We will now play with some data from 1974 Motor Trend Car Road Tests. The data e
 ?mtcars # learn more about the dataframe
 View(mtcars) # see the dataframe
   
-# Show work for 3.1-3.4 here!
+#3.1
+print(mean(mtcars[["hp"]]))
+
+#3.2
+print(mean(filter(mtcars, cyl == 4)[["hp"]]))
+
+#3.3
+print(mean(filter(mtcars, disp >= 100, disp <= 200)[["mpg"]]))
+
+#3.4
+ggplot(data = mtcars) +
+  geom_point(mapping = aes(x = mtcars[["disp"]], y = mtcars[["mpg"]]))
 
 ```
 What is the mean horsepower for all cars?
-3.1) *TODO*
+3.1) 146.6875 hp
 
 What is the mean horsepower for cars with 4 cylinders?
-3.2) *TODO*
+3.2) 82.63636 hp
 
 What is the mean fuel efficiency (in MPG) for cars with a displacement between 100 and 200 cu. in.?
-3.3) *TODO*
+3.3) 21.6 mpg
 
 3.4) *TODO*: Use ggplot to plot the relationship between vehicle displacement (x-axis) and miles per gallon (y-axis)
 
@@ -86,22 +110,28 @@ MPG_KML_RATIO <- 0.35400619 # 1 Miles/Gallon = 0.35 Kilometer/Liter
 CIN_L_RATIO <- 0.0163871 # 1 cubic inch = 0.016 Liter
 
 # Add a column "kml" to the mtcars dataframe which provides the kilometers / liter for each car. The conversion from MPG to KML is provided by MPG_KML_RATIO.
-mtcars$kml <- #TODO
+mtcars$kml <- mtcars[["mpg"]] * MPG_KML_RATIO
   
 # Add a column "disp_l" to the mtcars dataframe which provides the displacement for each car in liters. The conversion from cubic inches to liters is provided by CIN_L_RATIO.
-mtcars$disp_l <- #TODO
+mtcars$disp_l <- mtcars[["disp"]] * CIN_L_RATIO
 
 # Convert mtcars$cyl to a factor (see Chapter 9.3)
-mtcars$cyl <- #TODO
+mtcars$cyl <- as.factor(mtcars$cyl)
 
 # Show 4.1 and 4.2 below!
+#4.1
+ggplot(data = mtcars) +
+  geom_point(mapping = aes(x = mtcars$kml, y = mtcars$disp_l, color = mtcars$cyl)) +
+  labs(title = "Fuel Efficiency by Displacement and Number of Cylinders",
+       x = "Fuel Efficiency (kilometers/liter)",
+       y = "Displacement (Liters)")
 
 ```
 
 4.1) *TODO* Use ggplot to plot the relationship between vehicle displacement in liters and kilometers/liter. Color the points by number of cylinder. Give the plot a title, label both axes.
 
 Based on your plot in 4.1, comment on the relationship between displacement, fuel efficiency, and cylinders. 
-4.2) *TODO*
+4.2) Cars with more cylinders tend to have lower fuel efficiency and higher displacement compared to cars with only 4 cylinders that have high fuel efficiency and low displacement.
 
 ### Looking at Boston housing data
 ```{r}
@@ -112,10 +142,22 @@ Based on your plot in 4.1, comment on the relationship between displacement, fue
 boston <- Boston
 View(boston) # Viewing data
 
+#5.2
+tract_house <- filter(boston, chas == 1) %>%
+        arrange(-crim) %>%
+        head(5) %>%
+        select(boston, medv)
+        median()
+
+#5.3
+median.tract_house <- filter(boston, chas == 0) %>%
+        arrange(-crim) %>%
+        head(5) %>%
+        select(medv)
 
 ```
 What does a row in the Boston dataset represent?
-5.1) *TODO* 
+5.1) The housing value for one town/suburb of Boston.
 
 What is the median value of owner-occupied homes for the 5 neighborhoods with the highest per capita crime rate that tract bound the Charles River? (hint: see Chapter 10)
 5.2) *TODO*
@@ -125,6 +167,6 @@ What is the median value of owner-occupied homes for the 5 neighborhoods with th
 
 
 Last question: How long did this assignment take you?
-6.1) *TODO*
+6.1) 3 hours
 
 That's it for this assignment. Great job!
